@@ -39,3 +39,10 @@ publishing {
         }
     }
 }
+
+// Needed when using ProjectBuilder
+tasks.withType<Test>().configureEach {
+    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
+        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    }
+}
